--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,7 +4,7 @@ html, body {
   background-color: #fff;
   font-family: 'Source Sans Pro', sans-serif;
   /* The html and body elements cannot have any padding or margin. */
-  border-top: 3px solid #9b6dff;
+  border-top: 3px solid #27A822;
 }
 
 /* Wrapper for page content to push down footer */
@@ -27,26 +27,26 @@ html, body {
   border-color: #ffffff;
 }
 .navbar-default .navbar-brand {
-  color: #9b6dff;
+  color: #6b6b6b;
 }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-  color: #9b6dff;
+  color: #6b6b6b;
 }
 .navbar-default .navbar-text {
-  color: #9b6dff;
+  color: #6b6b6b;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #9b6dff;
+  color: #6b6b6b;
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-  color: #9b6dff;
+  color: #6b6b6b;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-  color: #9b6dff;
+  color: #6b6b6b;
   background-color: #ffffff;
 }
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-  color: #9b6dff;
+  color: #6b6b6b;
   background-color: #ffffff;
 }
 .navbar-default .navbar-toggle {
@@ -70,13 +70,13 @@ html, body {
 }
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    color: #9b6dff;
+    color: #6b6b6b;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #9b6dff;
+    color: #6b6b6b;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #9b6dff;
+    color: #6b6b6b;
     background-color: #ffffff;
   }
 }
@@ -91,10 +91,10 @@ html, body {
   margin: 20px 0;
 }
 .container a {
-  color: #9b6dff;
+  color: #27A822;
 }
 .container a:hover {
-  color: #9b6dff;
+  color: #267723;
 }
 .container p img, .img-responsive {
   display: block;
@@ -116,10 +116,10 @@ html, body {
   font-size: 15px;
 }
 .panel-default h4 a, h5 a {
-  color: #9b6dff;
+  color: #27A822;
 }
 .panel-default h4 a:hover, h5 a:hover {
-  color: #9b6dff;
+  color: #267723;
 }
 .panel{
   border-style: none;
@@ -186,10 +186,10 @@ html, body {
   text-decoration: none !important;
 }
 .text-muted {
-	color: #9b6dff;
+	color: #6b6b6b;
 }
 div.footer{
-  border-bottom: 5px solid #9b6dff;;
+  border-bottom: 5px solid #27A822;;
 }
 /* Set the fixed height of the footer here */
 /*.footer {
